--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/breeze": "^1.7",
         "laravel/framework": "^8.75",
+        "laravel/jetstream": "^2.6",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "livewire/livewire": "^2.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
